<resources>
    <string name="app_name">AppToanCau</string>
    <string name="text_TieuDe">Information Form</string>
    <string name="hint_HoTen">Input full Name</string>
    <string name="hint_Email">Input Email</string>
    <string name="hint_DienThoai">Input Phone Number</string>
    <string name="text_XacNhan">Confirm</string>
    <string name="text_ChaoBan">Hello</string>
    <string name="text_Email" translatable="false">Email</string>
    <string name="text_SoDT">Phone Number</string>
</resources>
